# IBF-drought-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  drought_pipeline.py  pyproject.toml
.github/workflows/: update-image-prod.yaml
config/: ETH_climate_region_district_mapping.csv  LSO_climate_region_district_mapping.csv  config.yaml
data_updates/: add_adm_boundaries.py  add_climateregions_cosmos.py
droughtpipeline/: data.py  extract.py  forecast.py  load.py  pipeline.py  settings.py
